adding multiple hashtags to post in one endpoint; deleting post image by id; downloading files; forbidding commenting comment of a comment; ordering methods, renaming variables